header now correctly cuts off usernames that are too long to display

--- a/client/src/css/modules.css
+++ b/client/src/css/modules.css
@@ -73,6 +73,10 @@ button {
 
     .header__title {
         padding: 0.5rem 1rem;
+        max-width: 70%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 
 input[type=number] {
